--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: task_manager
-description: "A new Flutter project."
+name: doitly
+description: "Doitly - Your Personal Task Management App"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  carousel_slider: ^5.1.1
+  dots_indicator: ^4.0.1
 
 
 dev_dependencies:
